crates/ssa-cache-schema/tests/ui/fail_duplicate_type_attr.stderr
error: duplicate cache_schema rename attribute
 --> tests/ui/fail_duplicate_type_attr.rs:4:34
  |
4 | #[cache_schema(rename = "First", rename = "Second")]
  |                                  ^^^^^^
