crates/ssa-cache-schema/tests/ui/fail_duplicate_type_attr.rs
use ssa_cache_schema::CacheSchema;

#[derive(CacheSchema)]
#[cache_schema(rename = "First", rename = "Second")]
struct Bad {
    value: u32,
}

fn main() {}
